--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
   "name": "frontend-image-compress",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "compress image-type file in frontend using canvas",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc && gulp build"
   },
-  "keywords": ["image-compress","canvas","file-compress","frontend-compress"],
+  "keywords": [
+    "image-compress",
+    "canvas",
+    "file-compress",
+    "frontend-compress"
+  ],
   "author": "xhmm",
   "license": "MIT",
-  "repository":"https://github.com/XHMM/frontend-image-compress"
+  "repository": "https://github.com/XHMM/frontend-image-compress",
+  "devDependencies": {
+    "gulp": "^4.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify-es": "^1.0.4",
+    "typescript": "^3.1.3"
+  }
 }
