--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "frontend-image-compress",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "compress image-type file in frontend using canvas",
-  "main": "index.js",
+  "main": "./dist/frontend-compress.js",
   "scripts": {
-    "build": "npx tsc && gulp build"
+    "watch": "parcel watch ./src/frontend-compress.ts --global Compress --no-source-maps",
+    "build": "parcel build ./src/frontend-compress.ts --global Compress --out-file frontend-compress.min.js --no-source-maps"
   },
   "keywords": [
     "image-compress",
@@ -16,9 +17,7 @@
   "license": "MIT",
   "repository": "https://github.com/XHMM/frontend-image-compress",
   "devDependencies": {
-    "gulp": "4.0.0",
-    "gulp-rename": "1.4.0",
-    "gulp-uglify-es": "1.0.4",
+    "parcel-bundler": "^1.12.2",
     "typescript": "3.2.1"
   }
 }
