--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "module": "umd",
     "lib": ["dom","es5","es6"],
-    "outDir": "./dist"
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "outFile": "./index.d.ts"
   }
 }
