--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "typings": "./index.d.ts",
   "scripts": {
     "watch": "parcel watch ./src/frontend-compress.ts --global Compress --no-source-maps",
-    "build": "parcel build ./src/frontend-compress.ts --global Compress --out-file frontend-compress.min.js --no-source-maps"
+    "build": "parcel build ./src/frontend-compress.ts --global Compress --out-file frontend-compress.min.js --no-source-maps",
+    "def": "cd dist && tsc"
   },
   "keywords": [
     "image-compress",
