--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,5 +4,5 @@
     "module": "umd",
     "lib": ["dom","es5","es6"]
   },
-  "include": ["./frontend-compress.ts"]
+  "include": ["./frontend-image-compress.ts"]
 }
